@@ -1,8 +1,9 @@
 package util;
 
-import java.io.BufferedWriter;
+import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 
 import com.alibaba.fastjson.JSON;
 
@@ -10,8 +11,13 @@ import model.MerkleNode;
 
 public class MerkleUtil {
 	public static void main(String[] args) {
-		List<List<MerkleNode>> list=new LinkedList();
-		getMerkleTree("/Users/roc_peng/Downloads/merkle/roc/3");
+//		List<List<MerkleNode>> list=new LinkedList();
+//		getMerkleTree("/Users/roc_peng/Downloads/merkle/roc/3");
+//		StringBuilder sb=new StringBuilder("Users/roc_peng/3.txt");
+//		if(sb.lastIndexOf(".")>0){
+//			sb.delete(sb.lastIndexOf("."), sb.length());
+//		}
+//		System.out.println(sb);
 	}
 	
 	/**
@@ -19,14 +25,14 @@ public class MerkleUtil {
 	 * 默克尔树文件默认存放在/merkle/filename
 	 */
 	public static void getMerkleTree(String filePath){
-		LinkedList<LinkedList<MerkleNode>> list=new LinkedList();
-		LinkedList<MerkleNode> leafList=new LinkedList();
+		List<List<MerkleNode>> list=new LinkedList();
+		List<MerkleNode> leafList=new LinkedList();
 		String content=FileUtil.readFileToStr(filePath);
 		char[] arr =content.toCharArray();
 		//首先获得叶子
 		for(int i=0;i<arr.length;i++){
 			MerkleNode leaf=new MerkleNode();
-			leaf.setName("区块D"+i);
+			leaf.setName("BlockD"+i);
 			leaf.setHash(EncryptUtil.getSHA(arr[i]+""));
 			leafList.add(leaf);
 		}
@@ -35,10 +41,13 @@ public class MerkleUtil {
 		//二叉树信息保存到文件中
 		StringBuilder sb=new StringBuilder(filePath);
 		sb.replace(sb.lastIndexOf("/"), sb.lastIndexOf("/"), "/merkle/");
+		if(sb.lastIndexOf(".")>0){
+			sb.delete(sb.lastIndexOf("."), sb.length());
+		}
 		FileUtil.writeStrToFile(sb.toString(), JSON.toJSONString(list));
 	}
 	
-	private static void getMerkleNode(LinkedList<MerkleNode> list,LinkedList<LinkedList<MerkleNode>> allList){
+	public static void getMerkleNode(List<MerkleNode> list,List<List<MerkleNode>> allList){
 		allList.add(list);
 		if(list.size()==1)return;
 		LinkedList<MerkleNode> temp=new LinkedList<>();
@@ -50,10 +59,31 @@ public class MerkleUtil {
 			temp.add(tempNode);
 		}
 		if(list.size()%2==1){
-			MerkleNode tempNode=new MerkleNode(list.getLast().getName(), 
-					EncryptUtil.getSHA(list.getLast().getHash()));
+			MerkleNode tempNode=new MerkleNode(list.get(list.size()-1).getName(), 
+					EncryptUtil.getSHA(list.get(list.size()-1).getHash()));
 			temp.add(tempNode);
 		}
 		getMerkleNode(temp,allList);
+	}
+	
+	public static void getMerkleNode2(List<Map<String, String>> list,List<List<Map<String, String>>> allList){
+		allList.add(list);
+		if(list.size()==1)return;
+		LinkedList<Map<String, String>> temp=new LinkedList<>();
+		for(int i=0;i+1<list.size();i+=2){
+			Map<String, String> node1=list.get(i);
+			Map<String, String> node2=list.get(i+1);
+			Map<String, String> node3=new HashMap<>();
+			node3.put("name", node1.get("name")+node2.get("name"));
+			node3.put("hash", EncryptUtil.getSHA(node1.get("hash")+node2.get("hash")));
+			temp.add(node3);
+		}
+		if(list.size()%2==1){
+			Map<String, String> tempNode=new HashMap<>();
+			tempNode.put("name", list.get(list.size()-1).get("name"));
+			tempNode.put("hash", EncryptUtil.getSHA(list.get(list.size()-1).get("hash")));
+			temp.add(tempNode);
+		}
+		getMerkleNode2(temp,allList);
 	}
 }
